--- a/09_PEAQ/Dockerfile.peaq
+++ b/09_PEAQ/Dockerfile.peaq
@@ -6,13 +6,12 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 
 RUN apt-get update && apt-get install zsh curl git nano locales -y 
 RUN locale-gen en_US.UTF-8  
-ENV LANG en_US.UTF-8  
-ENV LANGUAGE en_US:en  
-ENV LC_ALL en_US.UTF-8  
+ENV LANG=en_US.UTF-8  
+ENV LANGUAGE=en_US:en  
+ENV LC_ALL=en_US.UTF-8  
 
 WORKDIR /scratch
 
-ADD ./peaqb-1.0.beta.tar.gz ./
 RUN buildDeps="autoconf \
                 automake \
                 cmake \
@@ -36,14 +35,17 @@ RUN buildDeps="autoconf \
         apt-get -yqq update && \
         apt-get install -yq --no-install-recommends ${buildDeps}
 
+#ADD ./peaqb-1.0.beta.tar.gz ./
+#COPY ./code /scratch
+
 WORKDIR peaqb-1.0.beta
 
-FROM prebuild AS builder
-RUN ./configure --prefix=/scratch/out --with-pic --enable-static --disable-shared 
-RUN make -s && make install
+#FROM prebuild AS builder
+#RUN ./configure --prefix=/scratch/out 
+#RUN make && make install
 
-RUN /scratch/out/bin/peaq || true
+#RUN /scratch/out/bin/peaq || true
 
-CMD ["./scratch/out/bin/peaq", "--version"]
+#CMD ["./scratch/out/bin/peaq", "--version"]
 
 
