--- a/02_visqol/Dockerfile.visqol
+++ b/02_visqol/Dockerfile.visqol
@@ -9,13 +9,17 @@ RUN curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > bazel
     mv bazel.gpg /etc/apt/trusted.gpg.d/ && \
     echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
     apt-get update && \
-    apt-get install -y python3-numpy bazel-${BAZEL_VERSION} && \
+    apt-get install -y nano python3-numpy bazel-${BAZEL_VERSION} && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /scratch
-RUN git clone https://github.com/google/visqol visqol
-
+RUN git clone https://github.com/miraliahmadli/visqol.git visqol
 WORKDIR /scratch/visqol 
-RUN bazel-5.3.2 build :visqol -c opt
+RUN git checkout 10388fe2ea22062ca7921ade51212f8a0c8cfdd3
+
+#RUN git clone https://github.com/google/visqol visqol
+#WORKDIR /scratch/visqol 
+
+#RUN bazel-5.3.2 build :visqol -c opt
 
 # FROM ubuntu:22.04 AS final
